--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <li><a href="#">About Me</a></li>
             <li><a href="#">Personal Project</a></li>
             <li><a href="#">Blog</a></li>
-            <!-- <li><a href="#">blog</a></li> -->
-            <li><a href="#">C---------ontact</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </div>
 </body>
