Here i made menu bar responsive and fully functional menu bar ready

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MD TAJUL ISLAM</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="manu.css">
 </head>
 <body>
     <div class="menu">
@@ -19,6 +20,9 @@
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+        <div class="menu_icon">
+            <h4><a href="#menu">MENU</a></h4>
+        </div>
     </div>
 </body>
 </html>
