main cover is ready called it UI ready

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MD TAJUL ISLAM</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="manu.css">
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="menu">
@@ -24,5 +25,35 @@
             <h4><a href="#menu">MENU</a></h4>
         </div>
     </div>
+    <section id="cover">
+        <div class="cover_contain">
+            <div>
+                <div class="dot"></div>
+                <div class="biography">
+                    <div class="left_bio">
+                        <img class="profile_picture"src="img/profile_picture.jpg" alt="">
+                        <h2>Md.Tajul Islam</h2>
+                        <h4>software engineer</h4>
+                        <br>
+                            <div class="bio_icon">
+                                <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/linkedin.png"/></a>
+                                <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/facebook-new.png"/></a>
+                                <!-- <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new--v1.png"/></a> -->
+                                <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/twitter.png"/></a>
+                                <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/git.png"/></a>
+                            </div>
+                    </div>
+                    <div class="mid_bio"></div>
+                    <div class="right_bio">
+                        <h2>About Me</h2><br>
+                        <p style="text-align: justify;">Hi, I'm Md.Tajul Islam, I'm a software engineer.I'm realy shy to talking about myself.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <h1>aaaaaaaaaaaaaaaaa</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, dolore soluta. Ex quae obcaecati iste expedita. Odit excepturi unde ipsam non beatae quo blanditiis quasi soluta totam, tempore voluptatem nisi consequatur repellat a assumenda optio incidunt architecto deleniti adipisci, harum, tempora sapiente aliquam. Ipsam soluta tenetur rerum aut aperiam, exercitationem deserunt alias consequuntur eveniet, debitis perspiciatis. Quis earum provident quos? Necessitatibus sunt nisi nesciunt nihil voluptatem consequatur suscipit debitis beatae nobis consectetur reprehenderit laborum, corporis quaerat culpa odit repudiandae earum ex aliquid sequi totam velit odio fuga dolorem? Aspernatur placeat saepe dicta ipsam nulla suscipit nihil asperiores minus hic autem!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum necessitatibus eaque quia consequatur ut sapiente suscipit in laudantium ad magnam sed perspiciatis aliquam totam nesciunt iusto iure eos quae, dolorum omnis officia vero ipsam harum debitis ab. Iusto quaerat rerum accusantium. At totam eveniet repudiandae excepturi. Quis, nemo animi magnam doloribus culpa labore aliquam iste facere, aperiam sed accusantium voluptatem assumenda. Pariatur animi fugiat qui, similique aliquid minus laboriosam corrupti, repellendus beatae repudiandae, a modi architecto cumque. Fugit delectus commodi cumque vero corporis expedita optio, ratione quod ipsam, odit quam, itaque dignissimos quibusdam aperiam blanditiis asperiores ut dolorem eos sit?</p>
 </body>
 </html>
