project page and project details page are ready

--- a/index.html
+++ b/index.html
@@ -55,16 +55,57 @@
             </div>
         </div>
     </section>
-    <p>Lorem osam eaque repudiandae. Consequatur dolores numquam ipsa est fugit sequi repudiandae fuga. Delectus ipsa minima incidunt. Atque esse mollitia corrupti, voluptates enim iure consequatur illum architecto beatae assumenda sint officia quos nihil! Eum aspernatur animi repellendus ex, suscipit totam ipsam dicta aut. Minus molestiae quaerat sunt atque error rem voluptatum similique voluptate sit ipsa quos inventore veritatis esse expedita fugiat tempore, architecto quasi reprehenderit enim iure omnis distinctio! Esse eligendi facilis numquam tempore ullam recusandae, cumque possimus delectus dolore ipsa nemo, nisi obcaecati ducimus assumenda omnis ab ratione corporis aut voluptate qui accusantium. Molestias ullam officiis vel corrupti corporis, porro quaerat distinctio voluptates natus debitis dolorem voluptatum quidem dignissimos omnis! At cupiditate laboriosam consequunturdolores nostrum molestiae adipisci ad debitis, tempora ullam natus alias labore temporibus voluptates impedit nemo voluptate aliquam itaque, accusamus dolor culpa. Soluta non in molestias sed beatae. Officiis a, earum enim eveniet, temporibus esse nemo quae quibusdam ea sunt tempora ut eos est optio, sequi maiores incidunt aliquam fuga dolore ipsa! Delectus libero soluta similique aut enim ab accusamus corrupti saepe animi voluptatum delectus numquam quis minus exercitationem quae vero laboriosam culpa distinctio aperiam maiores eius ducimus iusto. Quasi odio placeat officiis eum molestiae. Natus voluptate delectus autem facere tenetur. Eveniet harum unde est ullam dignissimos impedit incidunt dolore voluptate nobis adipisci, rem ducimus et! Reiciendis dicta et cupiditate ipsam, officia aliquid, corporis assumenda laudantium voluptatibus soluta aliquam excepturi, consequuntur qui. Et autem officiis amet! Eveniet harum unde quas dolore earum distinctio vel. Dolor maxime omnis facere neque, est fugit quisquam incidunt quo adipisci sint, iure ex corrupti quae nisi soluta at vitae. Aliquam eligendi deserunt error aut minus cumque odio totam molestias voluptas id necessitatibus esse impedit quo neque dolore voluptate consectetur qui nemo dicta, voluptatem iusto repudiandae quas! Sequi ut eius necessitatibus optio, voluptas, unde officiis repellat sint sunt nesciunt iste veritatis. Nesciunt maxime tenetur dolorum ipsum assumenda, non autem cupiditate tempore odio mollitia facilis distinctio officiis obcaecati illum in, reiciendis vel temporibus porro ullam nihil, similique vitae dignissimos. Quod ad porro molestiae dolores, vitae voluptatem et dicta dignissimos corporis sint, ratione est eveniet maiores quisquam? Nulla odit veniam architecto in non laudantium ad pariatur tempore consectetur impedit, explicabo quam ipsa vero ducimus rerum quos totam dolores perspiciatis, soluta doloremque illo. Deserunt excepturi consequuntur id nostrum quo vitae inventore. Delectus ab ipsa magnam reiciendis in neque sapiente. Sunt aut odio beatae deleniti! Ratione accusamus culpa voluptates aspernatur! Magni doloribus, vel a exercitationem quasi nihil impedit nulla error, alias aliquid dolor ex suscipit. Tempore culpa et dignissimos, consectetur ex officiis mollitia provident hic odio quae! Quibusdam, eius laboriosam explicabo porro recusandae natus nobis dolorum odio dicta, at, placeat repellat quidem id nesciunt? Vitae amet ipsam optio quasi aliquam quaerat, facilis iure accusamus provident officiis ratione distinctio non error quis, ad atque tempora tempore unde! Soluta rem in praesentium temporibus doloremque? Sed asperiores dolorem fugit? Amet asperiores tempore tenetur, voluptatem officia voluptatum exercitationem unde quisquam perferendis, harum natus hic possimus? Earum amet, optio accusamus, vero itaque dolorum beatae laboriosam quam quis nostrum ab corrupti neque unde, nihil laborum? Totam sequi dolorum deleniti quam nobis, culpa cumque iste, accusamus voluptate sit voluptatibus.</p>
-    <h1>MENU</h1>
-    <div class="manu">
-        <ul>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="personal_projects.html">Personal Project</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+
+
+    <div class="android_projects">
+        <h1>ANDROID PROJECTS:</h1>
+        <div class="android_project_center">
+            <div class="first_android_project">
+                <img src="img/temp_android_img1.jpg" alt="" width="100%" class="android_project_img">
+                <div class="project_lower_section">
+                    <h3>project name: TURING GIBBERISH</h3>
+                    <p style="text-align: justify;">Turing Gibberish is an android application that can encrypt your data using CEASER CIPHER. Ceaser shift is one of the simplest and most widely known encryption techniques.</p>
+                    <a href="android_project/turing_gibberish.html">Learn more..</a>
+                </div>
+            </div>
+            <div class="sec_android_project">
+                <img src="img/temp_android_img2.jpg" alt="" width="100%" class="android_project_img">
+                <div class="project_lower_section">
+                    <h3>project name: ATTENDANCE PLEASE</h3>
+                    <P style="text-align: justify;">Attendance please a present counting android application for our batch(mangrove 17-18). I develop this application to make easear present counting.</P>
+                    <a href="android_project/attendance_please.html">Learn more..</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section id="menu">
+            <h1 class="manu_header">MENU</h1>
+        <div class="manu">
+            <ul>
+                <li><a href="#">About Me</a></li>
+                <li><a href="personal_projects.html">Personal Project</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </section>
+
+
+    <div class="footer">
+        <div class="left_footer">
+            <p>Copyright © 2021 • <a href="index.html">Md. Tajul Islam</a></p>
+        </div>
+        <div class="mid_footer">
+            <p>Developed by <a href="index.html">Tajul</a></p>
+        </div>
+        <div class="right_footer">
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/linkedin.png"/></a>
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/facebook-new.png"/></a>
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new--v1.png"/></a>
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/twitter.png"/></a>
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/git.png"/></a>
+        </div>
     </div>
 </body>
 </html>
