--- a/personal_projects.html
+++ b/personal_projects.html
@@ -30,25 +30,61 @@
             <p>Some of my projetcs that I've worked in</p><hr width="10%" height="3px" color="black"></hr><br>
             <h1>Personal Projects</h1>
     </div>
+
+    
     <div class="android_projects">
         <h1>ANDROID PROJECTS:</h1>
         <div class="android_project_center">
             <div class="first_android_project">
-                <img src="img/temp_android_img1.jpg" alt="" width="100%">
+                <img src="img/temp_android_img1.jpg" alt="" width="100%" class="android_project_img">
                 <div class="project_lower_section">
                     <h3>project name: TURING GIBBERISH</h3>
                     <p style="text-align: justify;">Turing Gibberish is an android application that can encrypt your data using CEASER CIPHER. Ceaser shift is one of the simplest and most widely known encryption techniques.</p>
-                    <button>Learn more </button>
+                    <!-- <button onclick="turing_gibberish.html">Learn more..</button> -->
+                    <a href="android_project/turing_gibberish.html">Learn more..</a>
                 </div>
             </div>
             <div class="sec_android_project">
-                <img src="img/temp_android_img2.jpg" alt="" width="100%">
+                <img src="img/temp_android_img2.jpg" alt="" width="100%" class="android_project_img">
                 <div class="project_lower_section">
                     <h3>project name: ATTENDANCE PLEASE</h3>
                     <P style="text-align: justify;">Attendance please a present counting android application for our batch(mangrove 17-18). I develop this application to make easear present counting.</P>
-                    <button>Learn more</button>
+                    <!-- <button >Learn more..</button> -->
+                    <a href="android_project/attendance_please.html">Learn more..</a>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <section id="menu">
+        <h1 class="manu_header">MENU</h1>
+        <div class="manu">
+            <ul>
+                <li><a href="#">About Me</a></li>
+                <li><a href="personal_projects.html">Personal Project</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </section>
+
+
+
+
+    <!-- footer -->
+    <div class="footer">
+        <div class="left_footer">
+            <p>Copyright © 2021 • <a href="index.html">Md. Tajul Islam</a></p>
+        </div>
+        <div class="mid_footer">
+            <p>Developed by <a href="index.html">Tajul</a></p>
+        </div>
+        <div class="right_footer">
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/linkedin.png"/></a>
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/facebook-new.png"/></a>
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new--v1.png"/></a>
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/twitter.png"/></a>
+            <a href="#"><img src="https://img.icons8.com/ios-filled/50/ffffff/git.png"/></a>
         </div>
     </div>
 </body>
